Changed Double and Float to use valueOf
git-svn-id: https://svn.kuali.org/repos/student/brms/branches/brms-dev@10666 0ac02d80-fb3f-11dc-a574-c57244a850eb